[package]
name = "alpaca-data-relay"
version = "0.1.2"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { version = "0.3", git = "ssh://git@github.com/Overmuse/alpaca", branch = "main" }
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.7.1"
log = "0.4"
rdkafka = { version = "0.25", features = ["ssl-vendored"] }
futures = "0.3"
sentry = "0.19.0"
sentry-anyhow = "0.19.0"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
