[package]
name = "alpaca-data-relay"
version = "0.3.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { tag = "v0.5.1", git = "ssh://git@github.com/Overmuse/alpaca" }
anyhow = "1.0"
config = "0.11.0"
dotenv = "0.15"
futures = "0.3"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.2.1" }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
sentry = "0.19.0"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-log = "0.1.2"
